updated customer handler
